# bc_exploration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheel.yml  wheel.yml
bc_exploration/agents/: agent.py  frontier_agent.py  test_frontier_agent.py
bc_exploration/algorithms/: frontier_based_exploration.py  test_frontier_based_exploration.py
bc_exploration/benchmarks/: benchmarks.py
bc_exploration/cpp/: __init__.py  test_bindings.py
bc_exploration/cpp/include/: pybind11.h
bc_exploration/cpp/include/exploration/: astar.hpp  collision.hpp  util.hpp
bc_exploration/cpp/src/: python.cpp
bc_exploration/cpp/src/exploration/: astar.cpp  collision.cpp
bc_exploration/envs/: grid_world.py  map_maker.py  test_grid_world.py
bc_exploration/footprints/: collision_cpp.py  footprint_points.py  footprints.py  test_footprints.py
bc_exploration/mapping/: costmap.py  log_odds_mapper.py  test_costmap.py  test_log_odds_mapper.py
bc_exploration/planners/: astar_cpp.py  test_astar_cpp.py
bc_exploration/sensors/: sensor_util.py  sensors.py  test_sensor_util.py
bc_exploration/utilities/: map_transformations.py  test_util.py  util.py  visualization.py
bc_linters/: check_illegal_constructs.py  check_illegal_imports.py  docstring_checker.py
